0.15
- some language fixes in the "products_catalogue" application

0.14
- fixed a bug in P4A_Number::format, if null is passed, null is returned (not zero)
- added P4A_Message::autoClear() to enable/disable auto clearing of messages
- removed P4A_Label::setType() because it were formally uncorrect
- P4A now can handle file/image uploads within rich_textarea fields (disabled by default)
- added P4A_Field:enableFileUpload() and P4A_Field:enableImageUpload()

0.13
- various bugfix in P4A_Link
- updated caledar widget to 1.0
- added P4A_Table_Col::setOrderable() and P4A_Table_Col::isOrderable() to set and check the possibility to enable the "order by" on a column
- added the possibility to intercept the "beforeDisplay" event on P4A_Table

0.12
- added folder.png and folder_open.png images in 16x16 pixels icons
- updated rich text editor (FCKeditor 2.0 RC3)
- now P4A_Field::getAsLabel() correctly handle multiline content
- P4A_Widget now instance a "handheld" smarty variable, passed to the template
- now P4A_Field::getAsDate() correctly manage handheld devices
- added some copyright notes to array_source.php, db_source.php, collection.php, data_source.php
- removed multivalue_field.php because it was obsolete
- removed P4A_Mask::addMultivalueField() because it was obsolete
- done some work on config.php to allow p4a to stay out of the document root (must have an alias set to /p4a), take a look at docs/httpd.conf
- added P4A_Mask::getPrevMask() and P4A::getPrevMask() to get an instance of the previous opened mask
- updated TODO
- updated READMEs
- bugfix in P4A_Table, now ordering works well with aliased fields
- changes in P4A_Frame, when viewed by an handheld no divs are generated and all elements float left (Pocket IE seems to not support floats)
- optimized P4A_Table_Navigation_Bar output for handhelds
- bugfix in P4A_Table_Navigation_Bar::addButton(), now margins are correct
- code cleanup
- removed some obsolete files